--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
@@ -33,16 +33,40 @@
     </section>
      <!-- "about-me" section -->
      <section id="about-me">
+        <div class="section-title">
         <h2>About Me</h2>
+        </div>
      </section>
      <!-- "work" section -->
      <section id="work">
+        <div class="section-title">
         <h2>Work</h2>
+        </div>
     </section>
      <!-- "contact-me" section -->
      <section id="contact-me">
+        <div class="section-title">
         <h2>Contact Me</h2>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li>
+                    <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                    <a href="#work">Work</a>
+                    </li>
+                    <li>
+                    <a href="#contact-me">Contact Me</a>
+                    </li>
+                    <li>
+                    <a href="#link to resume">Resume</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </section>
-    
+
 </body>
 </html>
