--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Lewis Culbert</title>
 </head>
 <body>
     <!-- navigation -->
     <header>
-        <h1>Learnatino</h1>
+        <h1>Lewis Culbert</h1>
         <nav>
             <ul>
                 <li>
@@ -29,7 +29,9 @@
     </header>
     <!-- "jumbotron" section -->
     <section class="jumbotron">
-        
+        <div>
+            <h3>My Portfolio</h3>
+        </div>
     </section>
      <!-- "about-me" section -->
      <section id="about-me">
