html layout complete

--- a/index.html
+++ b/index.html
@@ -38,29 +38,49 @@
         <div class="section-title">
         <h2>About Me</h2>
         </div>
+        <div class="about-me-paragraph">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu lectus turpis. Quisque sagittis sed neque vel hendrerit. Curabitur vitae sapien vestibulum, mollis lectus id, dictum est. Etiam vitae mauris in augue ullamcorper dapibus in et orci. Sed ut turpis ut risus gravida cursus. Phasellus nec laoreet sem. Donec sollicitudin sit amet turpis in ultricies. Aenean libero dolor, egestas non luctus id, viverra a massa. Donec sit amet quam lacus. Suspendisse ultrices consectetur dolor et aliquam. Donec eget pellentesque nibh, at cursus metus. In maximus ante eget mauris pharetra condimentum. Mauris metus massa, venenatis ac quam nec, elementum posuere risus. Donec at faucibus eros. Duis at quam neque.
+            </p>
+            <br>
+            <p>
+                Suspendisse blandit mi ac mauris ornare, et semper nisi vehicula. Fusce ultricies urna ut blandit placerat. Cras fringilla, risus eget auctor feugiat, turpis nibh porta dui, fringilla vulputate ex velit vel odio. Cras ut efficitur eros. Morbi est libero, posuere eget luctus vitae, pharetra eu mauris. Donec fringilla eros a auctor pretium. Fusce eu arcu at sem tincidunt rhoncus. Maecenas faucibus libero elit, id bibendum ante dapibus sed. Nulla a justo ligula. Donec accumsan mi sit amet lectus dapibus dignissim. Suspendisse sollicitudin sem id nulla ultricies, eu rhoncus felis porta. Fusce ligula ipsum, feugiat eu aliquet vel, ullamcorper id risus. In nec ante libero.
+            </p>
+        </div>
      </section>
      <!-- "work" section -->
      <section id="work">
         <div class="section-title">
         <h2>Work</h2>
         </div>
+     <!-- Grid Container -->
+     <div class="wrapper">
+        <div class="box run-buddy">
+            <h3>Run Buddy</h3>
+            <h4>HTML/CSS</h4>
+        </div>
+        <div class="box 2">B</div>
+        <div class="box 3">C</div>
+        <div class="box 4">D</div>
+        <div class="box 5">E</div>
+      </div>
     </section>
      <!-- "contact-me" section -->
      <section id="contact-me">
         <div class="section-title">
         <h2>Contact Me</h2>
         </div>
-        <div>
+        <div class=contact-li>
             <nav>
                 <ul>
                     <li>
-                    <a href="#about-me">About Me</a>
+                     <a>713.367.8976</a>
                     </li>
                     <li>
-                    <a href="#work">Work</a>
+                    <a>lew.culbert@gmail.com</a>
                     </li>
                     <li>
-                    <a href="#contact-me">Contact Me</a>
+                    <a href="https://github.com/Gocus10">GitHub</a>
                     </li>
                     <li>
                     <a href="#link to resume">Resume</a>
