added animation and hovers

--- a/index.html
+++ b/index.html
@@ -55,14 +55,36 @@
         </div>
      <!-- Grid Container -->
      <div class="wrapper">
-        <div class="box run-buddy">
+        <a href="https://gocus10.github.io/run-buddy/" class="box run-buddy">
+            <div class=grid-title>
             <h3>Run Buddy</h3>
             <h4>HTML/CSS</h4>
+            </div>
+        </a>
+        <div class="box project-two">
+            <div class=grid-title>
+                <h3>TBD</h3>
+                <h4>Stuff</h4>
+                </div>
         </div>
-        <div class="box 2">B</div>
-        <div class="box 3">C</div>
-        <div class="box 4">D</div>
-        <div class="box 5">E</div>
+        <div class="box project-three">
+            <div class=grid-title>
+                <h3>TBD</h3>
+                <h4>Stuff</h4>
+                </div>
+        </div>
+        <div class="box project-four">
+            <div class=grid-title>
+                <h3>TBD</h3>
+                <h4>Stuff</h4>
+                </div>
+        </div>
+        <div class="box project-five">
+            <div class=grid-title>
+                <h3>TBD</h3>
+                <h4>Stuff</h4>
+                </div>
+        </div>
       </div>
     </section>
      <!-- "contact-me" section -->
@@ -83,7 +105,7 @@
                     <a href="https://github.com/Gocus10">GitHub</a>
                     </li>
                     <li>
-                    <a href="#link to resume">Resume</a>
+                    <a href="https://www.linkedin.com/in/lewis-culbert-111342110/">Linkedin</a>
                     </li>
                 </ul>
             </nav>
