added project to portjolio

--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
             <h4>HTML/CSS</h4>
             </div>
         </a>
-        <div class="box project-two">
-            <div class=grid-title>
-                <h3>TBD</h3>
-                <h4>Stuff</h4>
+        <div>
+            <a href="https://gocus10.github.io/project1/" class="box project-two">
+                <div class=grid-title>
+                    <h3>Movie Search</h3>
+                    <h4>HTML/CSS/Javascript</h4>
                 </div>
+            </a>
         </div>
         <div class="box project-three">
             <div class=grid-title>
