--- a/index.html
+++ b/index.html
@@ -55,26 +55,24 @@
         </div>
      <!-- Grid Container -->
      <div class="wrapper">
-        <a href="https://gocus10.github.io/run-buddy/" class="box run-buddy">
+        <a href="https://pure-lake-04042.herokuapp.com/" class="box run-buddy">
             <div class=grid-title>
-            <h3>Run Buddy</h3>
-            <h4>HTML/CSS</h4>
-            </div>
-        </a>
-        <div>
-            <a href="https://gocus10.github.io/project1/" class="box project-two">
+                <h3>Music-Line</h3>
+                <h4>Express/Sequelize/Handlebars</h4>     
+            </div> 
+        </a> 
+        <a href="https://gocus10.github.io/project1/" class="box project-two">
                 <div class=grid-title>
                     <h3>Movie Search</h3>
                     <h4>HTML/CSS/Javascript</h4>
                 </div>
-            </a>
-        </div>
-        <div class="box project-three">
-            <div class=grid-title>
-                <h3>TBD</h3>
-                <h4>Stuff</h4>
+        </a>       
+        <a href="https://gocus10.github.io/run-buddy/" class="box project-three">
+                <div class=grid-title>
+                <h3>Run Buddy</h3>
+                <h4>HTML/CSS</h4>
                 </div>
-        </div>
+        </a>
         <div class="box project-four">
             <div class=grid-title>
                 <h3>TBD</h3>
