updated work and about-me

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         </div>
         <div class="about-me-paragraph">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu lectus turpis. Quisque sagittis sed neque vel hendrerit. Curabitur vitae sapien vestibulum, mollis lectus id, dictum est. Etiam vitae mauris in augue ullamcorper dapibus in et orci. Sed ut turpis ut risus gravida cursus. Phasellus nec laoreet sem. Donec sollicitudin sit amet turpis in ultricies. Aenean libero dolor, egestas non luctus id, viverra a massa. Donec sit amet quam lacus. Suspendisse ultrices consectetur dolor et aliquam. Donec eget pellentesque nibh, at cursus metus. In maximus ante eget mauris pharetra condimentum. Mauris metus massa, venenatis ac quam nec, elementum posuere risus. Donec at faucibus eros. Duis at quam neque.
+                I love climbing / gaming / and coding, basically anything to do with problem solving. I grew up in Houston, worked as a mechanic, and eventually made my way to Austin. I worked for the City of Austin on some awesome projects, like the Waller Creek Tunnel. I decided that I wanted to become a web developer to further my ability to create and help others to do the same. I put myself through the Coding bootcamp offered at UT and felt I had made the right decision for my future. 
             </p>
             <br>
             <p>
-                Suspendisse blandit mi ac mauris ornare, et semper nisi vehicula. Fusce ultricies urna ut blandit placerat. Cras fringilla, risus eget auctor feugiat, turpis nibh porta dui, fringilla vulputate ex velit vel odio. Cras ut efficitur eros. Morbi est libero, posuere eget luctus vitae, pharetra eu mauris. Donec fringilla eros a auctor pretium. Fusce eu arcu at sem tincidunt rhoncus. Maecenas faucibus libero elit, id bibendum ante dapibus sed. Nulla a justo ligula. Donec accumsan mi sit amet lectus dapibus dignissim. Suspendisse sollicitudin sem id nulla ultricies, eu rhoncus felis porta. Fusce ligula ipsum, feugiat eu aliquet vel, ullamcorper id risus. In nec ante libero.
+                Below is some of the work I have accomplished during my time at the coding bootcamp. I loved working with fellow classmates on big projects such as Music-line and Movie Search. I was proud of what we could accomplish in a 2-week window, as well as our ability to collaborate. I also enjoyed the solo projects I've built such as The Tech Blog as I felt as if it really cemented my understanding of the entire stack.
             </p>
         </div>
      </section>
@@ -67,24 +67,24 @@
                     <h4>HTML/CSS/Javascript</h4>
                 </div>
         </a>       
-        <a href="https://gocus10.github.io/run-buddy/" class="box project-three">
+        <a href="https://hidden-hamlet-01212.herokuapp.com/" class="box project-three">
                 <div class=grid-title>
-                <h3>Run Buddy</h3>
-                <h4>HTML/CSS</h4>
+                <h3>The Tech Blog</h3>
+                <h4>Full Stack</h4>
                 </div>
         </a>
-        <div class="box project-four">
+        <a href="https://gocus10.github.io/run-buddy/" class="box project-four">
             <div class=grid-title>
-                <h3>TBD</h3>
-                <h4>Stuff</h4>
-                </div>
-        </div>
-        <div class="box project-five">
+            <h3>Run Buddy</h3>
+            <h4>HTML/CSS</h4>
+            </div>
+        </a>
+        <a href="https://gocus-note-taker.herokuapp.com/" class="box project-five">
             <div class=grid-title>
-                <h3>TBD</h3>
-                <h4>Stuff</h4>
-                </div>
-        </div>
+            <h3>Note Taker</h3>
+            <h4>Express/mysql/bootstrap</h4>
+            </div>
+        </a>
       </div>
     </section>
      <!-- "contact-me" section -->
