added email functionality

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                      <a>713.367.8976</a>
                     </li>
                     <li>
-                    <a>lew.culbert@gmail.com</a>
+                    <a href="mamilto:lew.culbert@gmail.com">lew.culbert@gmail.com</a>
                     </li>
                     <li>
                     <a href="https://github.com/Gocus10">GitHub</a>
