--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 <h4>Full Stack</h4>
                 </div>
         </a>
-        <a href="https://gocus10.github.io/run-buddy/" class="box project-four">
+        <a href="https://wedding-spot.herokuapp.com/" class="box project-four">
             <div class=grid-title>
-            <h3>Run Buddy</h3>
-            <h4>HTML/CSS</h4>
+            <h3>Wedding-spot</h3>
+            <h4>React App Full Stack/graphql</h4>
             </div>
         </a>
         <a href="https://gocus-note-taker.herokuapp.com/" class="box project-five">
