--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                <a target='_blank' href="./assets/images/Lewis Resume 1.30.21.pdf">Resume</a>
+                <a target='_blank' href="./assets/images/Lewis-Resume.pdf">Resume</a>
                 </li>
             </ul>
         </nav>
